--- a/page.css
+++ b/page.css
@@ -13,7 +13,7 @@ body {
 
 header {
 
-  background-image: url(C:\Users\91933\Desktop\harshToletServices\MYREALSTATE_PROJECT/interior-design-neoclassical-style-with-furnishings-decor_23-2151199287.jpg);
+  background-image: url(interior-design-neoclassical-style-with-furnishings-decor_23-2151199287.jpg);
   background-size: cover;
   height: 100vh;
   width: 100%;
@@ -508,7 +508,7 @@ a :hover {
     
 }
 .landscape2{
-    height: 200px;
+    height: 250px;
     width: 300px;
     margin-right: 20px;
 }
