--- a/page.css
+++ b/page.css
@@ -149,6 +149,12 @@ h1 {
     }
 
 }
+@media screen and (max-width:700px){
+  h1 {
+      font-size: 4rem;
+  }
+
+}
 @media screen and (max-width:400px){
     .moto {
         font-size: 1.2rem;
@@ -337,6 +343,62 @@ a :hover {
         margin-top: 10px;
     }
 }
+@media screen and (max-width:700px){
+  .slide {
+    min-width: 100%;
+    height: auto;
+   
+}
+
+
+.slider {
+    
+        position: relative;
+        width: 80%;
+        height: 25vh;
+        max-width: 1200px;
+        overflow: hidden;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        margin-top: 50px;
+        margin-left: 20px;
+    
+    
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    
+}
+
+.navigation {
+    flex-direction: row;
+    
+    top: 50%;
+height: 20%;
+width: 100%;
+margin-left: -130px;
+margin-top: 1%;
+
+
+}
+
+.prev, .next {
+    position: relative;
+    top: 0;
+    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 10px;
+}
+
+}
+@media screen and (max-width:700px){
+  #about {
+  height: 60vh;
+  }
+}
 #Branchh{
     height: 110vh;
     width:100%;
@@ -378,7 +440,38 @@ a :hover {
 }
   
 
-  
+@media screen and (max-width: 700px) {
+  #Branchh{
+   height: 100vh;  
+  }
+  .containerr{
+      height: 400px;
+      width: 400px;
+  }
+
+
+
+.containerr{
+  margin-top: 60px;
+}
+
+.proj-1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2%;
+}
+.map1{
+  height: 200px;
+  width: 150px;
+  margin-top: 20px;
+}
+.map2{
+  height: 200px;
+  width: 150px;
+  margin-top: 20px;
+}
+} 
 
   
   /* ////.....proj2.....//// */
@@ -490,6 +583,48 @@ a :hover {
       }
     
   }
+  @media screen and (max-width:700px){
+    .proj-1{
+    width: 19rem;
+    
+    }
+    .map1{
+        height: 200px;
+        width: 220px;
+    }
+    .proj-1 .proj1-details h2{
+        font-size: 0.9rem;
+        color: #fdb500;
+      }
+      .proj-1 .proj1-details p{
+        font-size: 0.9rem;
+        color: #ff5500;
+        font-weight: 600;
+      }
+    
+  }
+  @media screen and (max-width:700px){
+    .proj-2{
+    width: 18rem;
+    margin-left: 35px;
+    
+    }
+    .map2{
+        height: 150px;
+        width: 120px;
+    }
+    .proj-2 .proj2-details h2{
+        font-size: 0.9rem;
+        color: #fdb500;
+      }
+      .proj-2 .proj2-details p{
+        font-size: 0.9rem;
+        color: #ff5500;
+        font-weight: 600;
+      }
+    
+  }
+  
   
   
   
@@ -546,6 +681,21 @@ margin-top: -20px;
                 opacity: 6;
             }
             }
+            @media screen and (max-width:700px){
+              .landscape{
+          height: 150px;
+          width: 350px;
+          margin-left: -8px;
+          margin-top: -20px;
+                        }
+                        #services{
+                          height: 40vh;
+                          width:100%;
+                          /* border: 2px solid black; */
+                          background-color: rgb(28, 34, 50);
+                          opacity: 6;
+                      }
+                      }
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 #contact{
     margin-top: 20px;
@@ -582,9 +732,9 @@ margin-top: -20px;
 @media screen and (max-width:400px){
     .watsapptext{
         color: aliceblue;
-        margin-left: -350px;
-        margin-top:110px;
-        font-size: 0.6rem;
+        margin-left: -304px;
+        margin-top: 105px;
+        font-size: 0.3rem;
     }
 }
 @media screen and (max-width:400px){
@@ -592,5 +742,23 @@ margin-top: -20px;
         height: 35vh;
     }
 }
+@media screen and (max-width:700px){
+  #contact{
+      height: 40vh;
+  }
+  .landscape21{
+    height: 69px;
+    width: 133px;
+    margin-top: 26px;
+    margin-left: -327px;
+}
+.watsapptext{
+  color: aliceblue;
+  margin-left: -304px;
+  margin-top: 105px;
+  font-size: 0.3rem;
+}
+}
+
 
 
